// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Page /> name passes its name 1`] = `
<page
  name="bar"
  style={undefined}
/>
`;

exports[`<Page /> name passes its name and avoids Symbol page conflict 1`] = `
<page
  name="Symbols (renamed to avoid conflict)"
  style={undefined}
/>
`;

exports[`<Page /> name passes otherProps 1`] = `
<page
  name={undefined}
  propName="something"
  style={Object {}}
/>
`;

exports[`<Page /> renders children 1`] = `
<page
  name={undefined}
  style={undefined}
>
  <foo>
    <bar />
  </foo>
</page>
`;
